  work on a PR.

- allow "#" in commands.  This is slightly incompatible with commands
  sections that used a comment after a "\" line continuation.
  Thanks David Stanek for the PR.

- fix issue289: fix build_sphinx target, thanks Barry Warsaw.

- fix issue252: allow environment names with special characters.
  Thanks Julien Castets for initial PR and patience.

- internal: push some optional object creation into tests because
  tox core doesn't need it.

2.2.1
-----

- fix bug where {envdir} substitution could not be used in setenv
  if that env value is then used in {basepython}. Thanks Florian Bruhin.

2.2.0
-----

- fix issue265 and add LD_LIBRARY_PATH to passenv on linux by default
  because otherwise the python interpreter might not start up in
  certain configurations (redhat software collections).  Thanks David Riddle.

- fix issue246: fix regression in config parsing by reordering 
  such that {envbindir} can be used again in tox.ini. Thanks Olli Walsh.

- fix issue99: the {env:...} substitution now properly uses environment
  settings from the ``setenv`` section. Thanks Itxaka Serrano.

- fix issue281: make --force-deps work when urls are present in
  dependency configs.  Thanks Glyph Lefkowitz for reporting.

- fix issue174: add new ``ignore_outcome`` testenv attribute which
  can be set to True in which case it will produce a warning instead
  of an error on a failed testenv command outcome.  
  Thanks Rebecka Gulliksson for the PR.

- fix issue280: properly skip missing interpreter if
  {envsitepackagesdir} is present in commands. Thanks BB:ceridwenv


2.1.1
----------

- fix platform skipping for detox

- report skipped platforms as skips in the summary

2.1.0
----------

- fix issue258, fix issue248, fix issue253: for non-test commands 
  (installation, venv creation) we pass in the full invocation environment.

- remove experimental --set-home option which was hardly used and
  hackily implemented (if people want home-directory isolation we should